Fixed some layout issues, still need to style the page

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@
     font-size: 16px;
 }
 
+/*Landing page collage made with grid*/
 .grid-collage {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 5px;
+    gap: 1px;
     width: 40%;
 }
 
@@ -15,6 +16,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* Use object-fit: cover; to fill the grid cell entirely */
+    border-radius: 5px;
 }
 
 .ticket {
@@ -37,67 +39,60 @@
     grid-row: 2;
 }
 
+.landing-page-container{
+    display: flex;
+    margin: 2%;
+}
 
-/*.landing-page-container{*/
-/*    display: flex;*/
-/*}*/
+.text-center-landing{
+    display: flex;
+    padding: 2%;
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+}
+/*Landing page collage made with grid*/
 
-/*.img-landing-page {*/
-/*    width: 100%; !* Set your desired container width *!*/
-/*    height: 100%; !* Set your desired container height *!*/
-/*    overflow: hidden; !* Prevent the image from overflowing outside the container *!*/
-/*    border: blue 3px solid;*/
-/*    margin: 0 0 0 5rem;*/
-/*}*/
+/*Fonts*/
+.text-center-landing p{
+    font-size: 2.5rem;
+}
+/*Fonts*/
 
-/*.img-landing-page img{*/
-/*    width: 50%;*/
-/*    height: 100%;*/
-/*    object-fit: contain;*/
-/*    cursor: pointer;*/
-/*}*/
 
-/*.text-landing-page{*/
-/*    margin: 0 5rem 0 0;*/
-/*    width: 60%;*/
-/*    display: flex;*/
-/*    align-items: center; !* Vertically center the content *!*/
-/*    justify-content: center;*/
-/*}*/
+@media screen and (max-width: 768px) {
+    /*Landing page collage made with grid*/
+    .grid-collage {
+        width: 80%;
+    }
 
-/*.text-landing-page p{*/
-/*    margin: 0;*/
-/*    font-size: 2.25rem;*/
-/*    text-align: left;*/
-/*}*/
+    .landing-page-container{
+        flex-direction: column;
+        padding: 8%;
+        margin: 0 2%;
+    }
 
-/*.text-center-landing{*/
-/*    background-color: grey;*/
-/*    color: white;*/
-/*    padding: 2rem;*/
-/*    border-radius: 5px;*/
-/*}*/
+    .grid-collage{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        order: 2;
+    }
 
-/*@media screen and (max-width: 768px) {*/
-/*    .landing-page-container{*/
-/*        flex-direction: column; !* Stack elements vertically on mobile *!*/
-/*        padding: 8%;*/
-/*        margin: 0 2%;*/
-/*    }*/
+    .text-center-landing{
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        order: 1;
+    }
 
-/*    .img-landing-page{*/
-/*        width: 100%; !* Expand to full width on mobile *!*/
-/*        margin: 0;*/
-/*        padding: 0;*/
-/*        order: 2;*/
-/*    }*/
+}
 
-/*    .text-landing-page{*/
-/*        width: 100%; !* Expand to full width on mobile *!*/
-/*        margin: 0;*/
-/*        padding: 0;*/
-/*        order: 1;*/
-/*    }*/
-
-/*}*/
+@media screen and (min-width: 769px) {
+    .center-landing{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+}
 
